[gd_scene load_steps=5 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/smart_ui_nodes/smart_checkbox/smart_checkbox.gd" type="Script" id=2]
[ext_resource path="res://UI/menu_click.wav" type="AudioStream" id=3]
[ext_resource path="res://UI/menu_hover.wav" type="AudioStream" id=4]

[node name="SmartCheckbox" type="CheckBox"]
margin_right = 24.0
margin_bottom = 24.0
script = ExtResource( 2 )
selected_color = Color( 0.968627, 0.588235, 0.0901961, 1 )
hover_sound = ExtResource( 4 )
click_sound = ExtResource( 3 )

[node name="sound_player" parent="." instance=ExtResource( 1 )]

[connection signal="button_down" from="." to="." method="_on_SmartCheckbox_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_SmartCheckbox_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SmartCheckbox_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SmartCheckbox_mouse_entered"]
